syntax = "proto3";

package greet;

message HelloRequest {
  string name = 1;
}